--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@redux-devtools/extension": "^3.3.0",
     "axios": "^1.5.1",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
@@ -18,6 +19,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "web-vitals": "^3.5.0"
   },
